infra/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing
  labels:
    app.kubernetes.io/part-of: ticketing-labs
